fix dark mode

--- a/src/components/about.css
+++ b/src/components/about.css
@@ -50,7 +50,7 @@
     font-weight: 700;
 }
 .about-section.dark > .about-heading > span {
-    color: rgb(16, 27, 37);
+    color: #F15A59;
 }
 
 .about-heading > hr {
