--- a/src/components/project.css
+++ b/src/components/project.css
@@ -61,6 +61,9 @@
     font-weight: 700;
 }
 
+
+
+
 span.react {
     background: linear-gradient(to right, teal, orangered);
     /* background-color: teal; */
@@ -104,8 +107,9 @@ span.typescript {
     bottom: 0.1rem;
 }
 
+
 .project-links > a > img {
-    height: 1.3rem;
+    height: 1.4rem;
     animation: ease-out 1s;
 }
 
